refactoring, fixed all "unchecked" warnings, fixed runtime waring for native access from unnamed modules